cmake_minimum_required(VERSION 2.8)

project(test_shader)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_BUILD_TYPE debug)
#set(CMAKE_SKIP_RPATH TRUE) 
set(MESA_LIB_PATH /home/inno/weiqm/backup/lib)
set(MESA_INCLUDE_PATH /home/inno/weiqm/backup/include)
set(DRM_INCLUDE_PATH /home/inno/weiqm/backup/include/libdrm)
link_directories(${MESA_LIB_PATH})
add_executable(test_shader test_shader.c)
include_directories(${MESA_INCLUDE_PATH})
#target_link_libraries(test_shader ${OSMESA_LIB} pthread GL EGL gbm m dl)
target_link_libraries(test_shader  pthread GL EGL OSMesa gbm m dl)
